--- a/about.html
+++ b/about.html
@@ -14,10 +14,9 @@
     </div>
     <div class="navLink">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Portfolio</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
@@ -25,7 +24,6 @@
   <section class="sec">
     <header>
       <div class="toggle"></div>
-      <a href="#" class="btn">Hire Me</a>
     </header>
 <div class="content">
       <p>
