--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
         <img src="P1-t.png" data-full="Project1.jpeg" alt="Project 1">
         <div class="project-info">
           <h3>Project 1</h3>
-          <p>This is a description of Project 1. It includes details about the technologies used and the challenges overcome.</p>
+          <p>I developed an e-commerce website for Gravity Inc., a brand specializing in selling a wide range of products online. The platform is designed with a clean, user-friendly interface, secure payment integration, and responsive layouts to ensure a smooth shopping experience across all devices.</p>
         </div>
       </div>
 
@@ -50,7 +50,7 @@
         <img src="P2-t.png" data-full="Project2.jpeg" alt="Project 2">
         <div class="project-info">
           <h3>Project 2</h3>
-          <p>This is a description of Project 2. It highlights the key features and outcomes of the project.</p>
+          <p>I created a professional website for Atlassofts, designed to showcase and sell their services online, including web development, digital marketing, and IT solutions. The site features a modern layout, responsive design, and clear service listings to provide clients with an easy and engaging experience.</p>
         </div>
       </div>
 
@@ -59,7 +59,7 @@
         <img src="P3-t.png" data-full="Project3.jpeg" alt="Project 3">
         <div class="project-info">
           <h3>Project 3</h3>
-          <p>This is a description of Project 3. It explains the goals achieved and the impact of the project.</p>
+          <p>I developed an e-commerce website for selling game keys, where users can browse and purchase their favorite titles. The platform includes a secure payment gateway, instant key delivery system, and a responsive design to ensure a smooth buying experience across all devices.</p>
         </div>
       </div>
 
