--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="content">
       <h2>Hi, I am<br><span>Mubashir Nazeer</span></h2>
       <p>Network Engineer || Artificial Intelligence</p>
-      <a href="D:/Portfolioupdated/CV.pdf" class="btn">Download My CV</a>
+      <a href="D:/Projects/Portfolioupdated/CV.pdf" class="btn">Download My CV</a>
     </div>
 
     <footer>
