--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <div class="content">
       <h2>Hi, I am<br><span>Mubashir Nazeer</span></h2>
-      <p>Network Engineer || Artificial Intelligence</p>
+      <p>IT Support Executive || Systems & Network</p>
       <a href="D:/Projects/Portfolioupdated/CV.pdf" class="btn">Download My CV</a>
     </div>
 
@@ -56,4 +56,5 @@
     }
   </script>
 </body>
+
 </html>
