--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="content">
       <h2>Hi, I am<br><span>Mubashir Nazeer</span></h2>
       <p>IT Support Executive || Systems & Network</p>
-      <a href="D:/Projects/Portfolioupdated/CV.pdf" class="btn">Download My CV</a>
+      <a href="Mubashir Nazeer Resume.pdf" class="btn">Download My CV</a>
     </div>
 
     <footer>
@@ -58,3 +58,4 @@
 </body>
 
 </html>
+
